# SPARTA_Multi6DoF_project

./: .gitignore  README.md
audio_plugins/: CMakeLists.txt
audio_plugins/_SPARTA_MCFX-6DoFconv_/: CMakeLists.txt  README.md  sparta_Multi6DoFconv.jucer
audio_plugins/_SPARTA_MCFX-6DoFconv_/src/: MCFX_MtxConv.cpp  MCFX_MtxConv.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  mcfx_tvconv_wraplayer.cpp  mcfx_tvconv_wraplayer.h  sceneView.h
audio_plugins/_SPARTA_Multi6DoFconv_/: CMakeLists.txt  README.md  sparta_Multi6DoFconv.jucer
audio_plugins/_SPARTA_Multi6DoFconv_/src/: MCFX_ConvolverData.cpp  MCFX_MtxConv.cpp  MCFX_MtxConv.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  mcfx_tvconv_wraplayer.cpp  mcfx_tvconv_wraplayer.h  sceneView.cpp  sceneView.h
audio_plugins/resources/: SPARTALookAndFeel.h
scripts/: .gitignore  build_win64.bat  build_win64_6DoFconv.bat  build_win64_MCFX-6DoFconv.bat  build_win64_Multi6DoFconv.bat  debug_win64_MCFX-6DoFconv.bat  debug_win64_Multi6DoFconv.bat  set_FFTW3_paths.bat
scripts/installer/: MCFX-6DoFconv_win64.nsi  multi6DoF_win64.nsi
